# ChatGPT

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
ChatGPTWeb/: ChatGPTWeb.py  GPT.py  OpenAIAuth.py  __init__.py  __main__.py  agent.py  api.py  capabilities.py  config.py  content.py  control_ui.py  http_api.py  load.js  load.py  load2.js  load3.js  load5.js  mcp_server.py  service.py  storage.py  verification.py
docs/: agent-roadmap.md
example/: example_1.py  local_chat.py  local_console.py  local_sessions.example.json  local_smoke.py  login.py
tests/: mcp_stdio_server.py  test_agent.py  test_capabilities.py  test_content.py  test_google_login.py  test_history_storage.py  test_login_state.py  test_mcp_server.py  test_runtime_startup.py  test_send_retry.py  test_stream_parser.py  test_verification.py
