[project]
name = "ChatGPTWeb"
version = "0.3.1"
description = "ChatGPT PlayWright API"
authors = [
    {name = "nek0us", email = "nekouss@mail.com"},
]
license = {text = "GPL3"}
dependencies = ["playwright_firefox >= 1.0.1","httpx>= 0.28.1","aioconsole","aiohttp","pillow","filetype"]
requires-python = ">=3.10"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/nek0us/ChatGPT"
Repository = "https://github.com/nek0us/ChatGPT"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"