[project]
name = "chatgptweb"
version = "0.4.4"
description = "ChatGPT PlayWright API"
authors = [
    {name = "nek0us", email = "nekouss@mail.com"},
]
license = {text = "GPL3"}
dependencies = ["playwright_firefox >= 1.0.4","httpx>= 0.28.1","aioconsole","aiohttp","pillow","filetype","pydantic>=2"]
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.urls]
Homepage = "https://github.com/nek0us/ChatGPT"
Repository = "https://github.com/nek0us/ChatGPT"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
